@@ -1,0 +1,96 @@
+=head1 NAME
+
+ORDB::CPANTesters::Reports - ORDB::CPANTesters class for the reports table
+
+=head1 SYNOPSIS
+
+  TO BE COMPLETED
+
+=head1 DESCRIPTION
+
+TO BE COMPLETED
+
+=head1 METHODS
+
+=head2 select
+
+  # Get all objects in list context
+  my @list = ORDB::CPANTesters::Reports->select;
+  
+  # Get a subset of objects in scalar context
+  my $array_ref = ORDB::CPANTesters::Reports->select(
+      'where id > ? order by id',
+      1000,
+  );
+
+The C<select> method executes a typical SQL C<SELECT> query on the
+reports table.
+
+It takes an optional argument of a SQL phrase to be added after the
+C<FROM reports> section of the query, followed by variables
+to be bound to the placeholders in the SQL phrase. Any SQL that is
+compatible with SQLite can be used in the parameter.
+
+Returns a list of B<ORDB::CPANTesters::Reports> objects when called in list context, or a
+reference to an ARRAY of B<ORDB::CPANTesters::Reports> objects when called in scalar context.
+
+Throws an exception on error, typically directly from the L<DBI> layer.
+
+=head2 count
+
+  # How many objects are in the table
+  my $rows = ORDB::CPANTesters::Reports->count;
+  
+  # How many objects 
+  my $small = ORDB::CPANTesters::Reports->count(
+      'where id > ?',
+      1000,
+  );
+
+The C<count> method executes a C<SELECT COUNT(*)> query on the
+reports table.
+
+It takes an optional argument of a SQL phrase to be added after the
+C<FROM reports> section of the query, followed by variables
+to be bound to the placeholders in the SQL phrase. Any SQL that is
+compatible with SQLite can be used in the parameter.
+
+Returns the number of objects that match the condition.
+
+Throws an exception on error, typically directly from the L<DBI> layer.
+
+=head1 ACCESSORS
+
+=head2 id
+
+  if ( $object->id ) {
+      print "Object has been inserted\n";
+  } else {
+      print "Object has not been inserted\n";
+  }
+
+Returns true, or throws an exception on error.
+
+
+REMAINING ACCESSORS TO BE COMPLETED
+
+=head1 SUPPORT
+
+ORDB::CPANTesters::Reports is part of the L<ORDB::CPANTesters> API.
+
+See the documentation for L<ORDB::CPANTesters> for more information.
+
+=head1 AUTHOR
+
+The Author
+
+=head1 COPYRIGHT
+
+Copyright 2009The Author.
+
+This program is free software; you can redistribute
+it and/or modify it under the same terms as Perl itself.
+
+The full text of the license can be found in the
+LICENSE file included with this module.
+
